# artist-directory

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
infrastructure/terraform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
infrastructure/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/sns/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/step_functions/: main.tf  outputs.tf  variables.tf
sql/: schema.sql
sql/migrations/: 001_create_tables.sql  002_add_indexes.sql
sql/seeds/: test_data.sql
src/: config.py
src/api/: dependencies.py  main.py
src/api/routes/: artists.py  oauth.py  promoter.py
src/etl/: transform.py  upload_to_s3.py
src/lambdas/extract momentum/: handler.py  utils.py
src/lambdas/notify_promoters/: handler.py  utils.py
src/lambdas/refresh_oauth_tokens/: handler.py  utils.py
src/lambdas/save_artist_submission/: handler.py  utils.py
src/oauth/: soundcloud_auth.py
tests/practice/: test_placeholder.py
