[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artist_directory"
version = "0.1.0"
description = "A directory and discovery platform for underrepresented DJs"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.26.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-testdox>=0.3.4",
    "ruff>=0.11",
    "bandit>=1.8",
    "moto<=5.1.6",
]

[tool.pytest.ini_options]
addopts = "-vvv -rP --testdox"
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
